; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_manager.c_manager_load_unit.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_manager.c_manager_load_unit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @manager_load_unit(i32** %0, i8* %1, i8* %2, i32* %3, i32** %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i32, align 4
  store i32** %0, i32*** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32** %4, i32*** %11, align 8
  %13 = load i32**, i32*** %7, align 8
  %14 = call i32 @assert(i32** %13)
  %15 = load i32**, i32*** %11, align 8
  %16 = call i32 @assert(i32** %15)
  %17 = load i32**, i32*** %7, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = load i8*, i8** %9, align 8
  %20 = load i32*, i32** %10, align 8
  %21 = load i32**, i32*** %11, align 8
  %22 = call i32 @manager_load_unit_prepare(i32** %17, i8* %18, i8* %19, i32* %20, i32** %21)
  store i32 %22, i32* %12, align 4
  %23 = load i32, i32* %12, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %5
  %26 = load i32, i32* %12, align 4
  store i32 %26, i32* %6, align 4
  br label %34

27:                                               ; preds = %5
  %28 = load i32**, i32*** %7, align 8
  %29 = call i32 @manager_dispatch_load_queue(i32** %28)
  %30 = load i32**, i32*** %11, align 8
  %31 = load i32*, i32** %30, align 8
  %32 = call i32* @unit_follow_merge(i32* %31)
  %33 = load i32**, i32*** %11, align 8
  store i32* %32, i32** %33, align 8
  store i32 0, i32* %6, align 4
  br label %34

34:                                               ; preds = %27, %25
  %35 = load i32, i32* %6, align 4
  ret i32 %35
}

declare dso_local i32 @assert(i32**) #1

declare dso_local i32 @manager_load_unit_prepare(i32**, i8*, i8*, i32*, i32**) #1

declare dso_local i32 @manager_dispatch_load_queue(i32**) #1

declare dso_local i32* @unit_follow_merge(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
